# APS_etl

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  queries.yaml  registry_schema.json  requirements.txt
alembic/: env.py
alembic/versions/: 0001_milestone1_tables.py
aps_etl/: AGENTS.md  __init__.py  canonical.py  client.py  db.py  models.py  registry.py  runner.py  serialization.py  settings.py
aps_etl/.github/workflows/: ci.yml
tests/: helpers.py  test_canonical.py  test_db_upsert.py  test_integration_runner.py  test_placeholders.py  test_registry_filters.py  test_registry_validation.py  test_runner_failure.py  test_serialization.py  test_smoke_live.py  test_smoke_offline.py
tests/fixtures/cassettes/: search_runner.yaml
